# amelia-bertino-legal-nlp

./: .env.example  .gitignore  .gitmessage  README.md  demo.py  eval.py  pyproject.toml  requirements.txt  train_baseline.py  train_bert.py
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_error_analysis.ipynb
scripts/: eval.py  smoke_test.py  train_baseline.py  train_bert.py
slides/: README.md  beamerthemesintef.sty  main.tex  references.bib
slides/template_unifi/: beamerunifi.tex
src/amelia_experiment/: __init__.py  artifacts.py  baseline.py  bertino.py  config.py  dataset.py  fasttext_model.py  logging_utils.py  metrics.py  plotting.py  preprocess.py
tests/: test_baseline.py  test_dataset.py  test_metrics.py  test_preprocess.py
